--- a/stocks/src/app/app.component.html
+++ b/stocks/src/app/app.component.html
@@ -9,6 +9,7 @@
       </nav>
       </div>
   </header>
-  <main class="mdl-layout__content" style="padding: 20px;">
+  <main class="mdl-layout__content" style="padding: 20px;" >
+    <app-dashboard></app-dashboard>
   </main>
 </div>
