--- a/datacenter/src/app/navbar/navbar.component.html
+++ b/datacenter/src/app/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand mr-auto" href="#">My Data Center</a>
     <form class="form-inline">
-      <button class="btn btn-success" type="button" style="background-color: #24aa6e">Reload</button>
+      <button class="btn btn-success" type="button" 
+      style="background-color: #24aa6e" (click)="refresh()">Reload</button>
     </form>
   </nav>
